css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  font-size: 62.5%;
  overflow-x: initial;
}

body {
  font-family: "Inter", sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
  overflow-x: hidden;
}

.heading-primary,
.heading-secondary,
.heading-tertiary,
.heading-forth {
  font-weight: 700;
  color: #333;
  /* color: #45260a; */
  /* color: #343a40; */
  letter-spacing: -0.5px;
}

.heading-primary {
  font-size: 5.2rem;
  line-height: 1.05;
  margin-bottom: 3.2rem;
}

.heading-secondary {
  font-size: 4.4rem;
  line-height: 1.2;
  margin-bottom: 6.4rem;
}

.heading-tertiary {
  font-size: 3rem;
  line-height: 1.2;
  margin-bottom: 3.2rem;
}
.heading-forth {
  font-size: 2.4rem;
  line-height: 1.4;
  margin-bottom: 1.4rem;
}
.container {
  /* 1140px */
  max-width: 130rem;
  padding: 0 3.2rem;
  margin: 0 auto;
}
.section {
  transition: transform 1s, opacity 1s;
}
.section-hidden {
  opacity: 0;
  transform: translateY(8rem);
}
.header {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 2px solid #eb7e7e;
  padding: 3.2rem;
  height: 8rem;
  box-shadow: 0 1.2rem 2.4rem rgba(#000, #000, #000, 0.5);
  background-color: #fff;
  width: 100%;
  font-size: 2rem;
}

.main-nav-items {
  display: flex;
  gap: 3.2rem;
  list-style: none;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.main-nav-link:link,
.main-nav-link:visited,
.contact:link,
.contact:visited {
  font-weight: 500;
  transition: all 0.5s;
  text-decoration: none;
}
.main-nav-link:link,
.main-nav-link:visited {
  color: #000;
}
.contact:link,
.contact:visited {
  color: #fff;
}

.contact {
  padding: 1.6rem 3.2rem;
  background-color: rgba(235, 126, 126, 1);
  border-radius: 0.9rem;
}
.contact:hover,
.contact:active {
  background-color: #bc6565;
}
.main-nav.sticky {
  position: fixed;
  background-color: rgba(255, 255, 255, 0.95);
  z-index: 9999999999;
  width: 100%;
}
.btn-mobile-nav,
.btn-mobile-nav__tab,
.btn-mobile-nav__gallery {
  border: none;
  background: none;
  cursor: pointer;
  display: none;
  z-index: 999999;
}
.btn-mobile-nav ion-icon,
.btn-mobile-nav__tab ion-icon,
.btn-mobile-nav__gallery ion-icon {
  height: 4.8rem;
  width: 4.8rem;
  color: #333;
}
.btn-mobile-nav ion-icon[name="close-outline"],
.btn-mobile-nav__tab ion-icon[name="close-outline"],
.btn-mobile-nav__gallery ion-icon[name="close-outline"] {
  display: none;
}
/* ****************************************************** */
/* *******Modal Contact*************** */
/* ****************************************************** */

.logo {
  text-decoration: none;
  color: rgba(235, 126, 126, 1);
  font-size: 4.8rem;
  font-weight: 700;
}
.logo-img {
  width: 25rem;
}
.section-hero {
  position: relative;
  padding: 4.8rem 0 9.6rem 0;
  background: linear-gradient(-20deg, #e0eaf3 0%, #e3ecf5 6%, #ffffff 57%);
}
.hero-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 4.8rem;
  align-items: center;
  padding-top: 3.2rem;
  align-items: center;
  justify-content: center;
}

.highlited-text {
  color: rgba(235, 126, 126, 1);
  text-shadow: 2px 2px #000;
}

.text-as-subheading {
  font-size: 1.8rem;
  line-height: 1.6;
  margin-bottom: 3.2rem;
  color: #333;
}
.link-learn-more {
  display: inline-block;
  color: #fff;
  background-color: rgba(235, 126, 126, 1);
  text-decoration: none;
  font-size: 2rem;
  font-weight: 600;
  padding: 1.6rem 3.2rem;
  border-radius: 9px;

  border: none;
  cursor: pointer;
  font-family: inherit;

  transition: all 0.3s;
}
.link-learn-more:hover,
.link-learn-more:active {
  background-color: #bc6565;
}
.image {
  width: 60rem;
  height: auto;
}

.slider {
  max-width: 100rem;
  height: 50rem;
  margin: 0 auto;
  position: relative;

  /* IN THE END */
  overflow: hidden;
  z-index: 999;
}

.slide {
  position: absolute;
  top: 0;
  width: 60rem;
  height: 50rem;

  display: flex;
  align-items: center;
  justify-content: center;

  /* THIS creates the animation! */
  transition: transform 1s;
}

.slide > img {
  /* Only for images that have different size than slide */
  width: 60rem;
  height: 41.131rem;
}

.slider__btn {
  position: absolute;
  top: 50%;
  z-index: 10;

  border: none;
  background: rgba(255, 255, 255, 0.7);
  font-family: inherit;
  color: #333;
  border-radius: 50%;
  height: 5.5rem;
  width: 5.5rem;
  font-size: 3.25rem;
  cursor: pointer;
}

.slider__btn--left {
  left: 6%;
  transform: translate(-50%, -50%);
}

.slider__btn--right {
  right: 6%;
  transform: translate(50%, -50%);
}

.dots {
  position: absolute;
  bottom: 5%;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}

.dots__dot {
  border: none;
  background-color: #b9b9b9;
  opacity: 0.7;
  height: 1rem;
  width: 1rem;
  border-radius: 50%;
  margin-right: 1.75rem;
  cursor: pointer;
  transition: all 0.5s;

  /* Only necessary when overlying images */
  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
}

.dots__dot:last-child {
  margin: 0;
}

.dots__dot--active {
  /* background-color: #fff; */
  background-color: #888;
  opacity: 1;
}
.image-width {
  width: 60rem !important;
}
.container-logos {
  margin-top: 1.4rem;

  display: flex;
  gap: 6.4rem;
  align-items: center;
  justify-content: center;
}
.featured-in-image {
  height: 5rem;
  filter: brightness(0);
  opacity: 40%;
}
.heading-featured-in {
  font-size: 1.4rem;
  text-transform: uppercase;
  letter-spacing: 0.75px;
  font-weight: 500;
  text-align: center;
  margin-bottom: 2rem;
  color: #888;
  margin-top: 2rem;
}
/* ****************************************************** */
/* *******SECTION 2*************** */
/* ****************************************************** */
/* .section-dograma {
  padding: 2.4rem 9.6rem 4.8rem 0;
} */
.section-dograma {
  padding-top: 2.4rem;
  background-color: #fff;
  position: relative;
}
/* ... */

